--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              5106-铁西区
-bio:                'Miniaaaa, one column jekyll theme.'
-description:        "铁西区没有重工业，只有童年的回忆。"
+title:               6015-铁西区
+bio:                '铁西区没有重工业，只有几代人的回忆。'
+description:        "90后，成都绿岛 最慢速度保持者"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
@@ -55,9 +55,9 @@ steam:              username
 #youtube:           username
 #youtube-channel:   channel
 #soundcloud:        username
-#weibo:             username
+weibo:             u/1789159531
 #flickr:            username
-#codepen:           username
+bilibili:           890619
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
