--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:               6015-铁西区
+title:               铁西区
 bio:                '铁西区没有重工业，只有几代人的回忆。'
 description:        "90后，成都绿岛 最慢速度保持者"
 reading_time:       true
