--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:               铁西区
 bio:                '铁西区没有重工业，只有几代人的回忆。'
-description:        "90后，成都绿岛 最慢速度保持者"
+description:        "QQ群:830313841"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
@@ -55,9 +55,9 @@ disqus_shortname:   taylantatli
 #youtube:           username
 #youtube-channel:   channel
 #soundcloud:        username
-weibo:             u/1789159531
+#weibo:             u/1789159531
 #flickr:            username
-bilibili:           890619
+#bilibili:           890619
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
