--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site
-title:               铁西区
-bio:                '铁西区没有重工业，只有几代人的回忆。'
+title:               铁西社区
+bio:                '社区没有重工业，只有几代人的回忆。'
 description:        "QQ群:830313841"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
-tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
+tiled_bg:           true   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://BBModevelop.github.io
 
