--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:               铁西社区
-bio:                '社区没有重工业，只有几代人的回忆。'
-description:        "QQ群:830313841"
+title:               Cypresses
+bio:                'There is no heavy industry here, just generations of memories.'
+description:        "Contact me: cypress_cn@foxmail.com"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
