--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:               Cypresses
+title:               Cypress
 bio:                'There is no heavy industry here, just generations of memories.'
 description:        "Contact me: cypress_cn@foxmail.com"
 reading_time:       true
