--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:s
 #twitter:            username
 #facebook:           username
 #github-url:         username
