--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ sass:
 # Comments
 disqus_shortname:   taylantatli
 
-# Social
+Social
 # if you don't have any of social below, comment the line.
 #google:
   #plus:            #username
