--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ Social
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:s
+#email:s
 #twitter:            username
 #facebook:           username
 #github-url:         username
