--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:               IK727
 bio:                'There is no heavy industry here, just generations of memories.'
-description:        "Contact me: cypress_cn@foxmail.com"
+description:        "Cypress_cn@foxmail.com"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
